fix: change apm.conf

--- a/data/dbus-config/apm.conf
+++ b/data/dbus-config/apm.conf
@@ -4,4 +4,8 @@
   <policy user="root">
     <allow own="com.application.APM"/>
   </policy>
+
+  <policy context="default">
+    <allow send_destination="com.application.APM" send_interface="org.freedesktop.DBus.Introspectable"/>
+  </policy>
 </busconfig>
