--- a/data/config.yml
+++ b/data/config.yml
@@ -1,5 +1,6 @@
 commandPrefix: ""
-pathImageFile: "image.yml"
-pathLogFile: "log/apm.log"
-pathDBFile: "db/apm.db"
+pathImageFile: "data/runtime/image.yml"
+pathLocales: "data/locales"
+pathLogFile: "data/runtime/apm.log"
+pathDBFile: "data/runtime/db/apm.db"
 environment: "prod"
