feature: add install.sh

--- a/data/config.yml
+++ b/data/config.yml
@@ -1,6 +1,6 @@
 commandPrefix: ""
-pathImageFile: "data/runtime/image.yml"
-pathLocales: "data/locales"
-pathLogFile: "data/runtime/apm.log"
-pathDBFile: "data/runtime/db/apm.db"
+pathImageFile: "/etc/apm/image.yml"
+pathLocales: "/var/apm/locales"
+pathLogFile: "/var/apm/apm.log"
+pathDBFile: "/var/apm/apm.db"
 environment: "prod"
