feature: update repo if error ErrFailedToFetch

--- a/data/dbus-config/apm.conf
+++ b/data/dbus-config/apm.conf
@@ -3,6 +3,7 @@
 <busconfig>
   <policy user="root">
     <allow own="com.application.APM"/>
+    <allow send_destination="com.application.APM" send_interface="com.application.system"/>
   </policy>
 
   <policy context="default">
