feature: new key-value database for icons

--- a/data/config.yml
+++ b/data/config.yml
@@ -2,5 +2,6 @@ commandPrefix: ""
 pathImageFile: "/etc/apm/image.yml"
 pathLocales: "/var/apm/locales"
 pathLogFile: "/var/apm/apm.log"
-pathDBFile: "/var/apm/apm.db"
+pathDBSQL: "/var/apm/apm.db"
+pathDBKV: "/var/apm/pogreb"
 environment: "prod"
