Rename APM ID from com.application to org.altlinux

--- a/data/dbus-config/apm.conf
+++ b/data/dbus-config/apm.conf
@@ -2,11 +2,11 @@
   "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
   <policy user="root">
-    <allow own="com.application.APM"/>
-    <allow send_destination="com.application.APM" send_interface="com.application.system"/>
+    <allow own="org.altlinux.APM"/>
+    <allow send_destination="org.altlinux.APM" send_interface="org.altlinux.system"/>
   </policy>
 
   <policy context="default">
-    <allow send_destination="com.application.APM" send_interface="org.freedesktop.DBus.Introspectable"/>
+    <allow send_destination="org.altlinux.APM" send_interface="org.freedesktop.DBus.Introspectable"/>
   </policy>
 </busconfig>
