very dubious feature

--- a/data/config.yml
+++ b/data/config.yml
@@ -2,6 +2,7 @@ commandPrefix: ""
 pathImageFile: "/etc/apm/image.yml"
 pathLocales: "/usr/share/locale"
 pathLogFile: "/var/apm/apm.log"
-pathDBSQL: "/var/apm/apm.db"
+pathDBSQLUser: "${XDG_DATA_HOME:-$HOME/.local/share}/apm/apm.db"
+pathDBSQLSystem: "/var/apm/apm.db"
 pathDBKV: "/var/apm/pogreb"
 environment: "prod"
