--- a/meson.build
+++ b/meson.build
@@ -101,3 +101,37 @@ custom_target(
       '-Wl,-Bstatic -lapt_wrapper -Wl,-Bdynamic -lapt-pkg -lstdc++',
   ]
 )
+
+# Go tests
+bash = find_program('bash')
+go_test_env = [
+  'CGO_ENABLED=1',
+  'CGO_CFLAGS=' + '-I' + meson.current_source_dir() + '/internal/common/binding/apt/wrapper ' + '-I/usr/include/apt-pkg',
+  'CGO_LDFLAGS=' + '-L' + meson.current_build_dir() + ' ' + '-Wl,-Bstatic -lapt_wrapper -Wl,-Bdynamic -lapt-pkg -lstdc++',
+]
+
+test('go-tests',
+  bash,
+  args: ['-lc', 'cd ' + meson.current_source_dir() + ' && go test -v -p 1 -count=1 ./... -tags apt_binding'],
+  env: go_test_env,
+  depends: [apt_wrapper_lib],
+  suite: 'go',
+  timeout: 1200,
+)
+
+custom_target(
+  'go-tests-live',
+  build_by_default: false,
+  console: true,
+  output: 'go-tests-live.done',
+  command: [
+    bash, '-lc',
+    'cd ' + meson.current_source_dir() + ' && ' +
+    'CGO_ENABLED=1 ' +
+    'CGO_CFLAGS=' + '\'' + '-I' + meson.current_source_dir() + '/internal/common/binding/apt/wrapper -I/usr/include/apt-pkg' + '\'' + ' ' +
+    'CGO_LDFLAGS=' + '\'' + '-L' + meson.current_build_dir() + ' -Wl,-Bstatic -lapt_wrapper -Wl,-Bdynamic -lapt-pkg -lstdc++' + '\'' + ' ' +
+    'go test -v -p 1 -count=1 ./... -tags apt_binding ; ' +
+    'echo ok > go-tests-live.done'
+  ],
+  depends: [apt_wrapper_lib],
+)
