--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -20,6 +20,7 @@ RUN apt-get update && \
         meson \
         ninja-build \
         cmake \
+        zsh \
         pkg-config \
         systemd-devel \
         # Go language
