--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -38,7 +38,7 @@ RUN apt-get update && \
         # Common test packages
         hello \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && rm -rf /tmp/* /var/tmp/*
 
 # Create workspace directory
 WORKDIR /workspace
