chore(help): add version
Format: `tag+commit_count` or `tag`.

Version formating from last tag and count of commits after that.

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,8 @@ i18n = import('i18n')
 go_root = run_command('printenv', 'GOROOT', check: false)
 go_bin = go_root.returncode() != 0 ? find_program('go') : find_program(join_paths(go_root.stdout().strip(), 'bin', 'go'))
 
+version = run_command('sh', meson.current_source_dir() + '/scripts/get-version.sh', check: false).stdout()
+
 cpp = meson.get_compiler('cpp')
 apt_lib = cpp.find_library('apt-pkg', dirs: ['/usr/lib64', '/usr/lib'], required: true)
 apt_inc = include_directories('/usr/include/apt-pkg')
@@ -34,6 +36,7 @@ constants = [
   ['apm/lib.BuildPathLogFile', LOG_FILEPATH],
   ['apm/lib.BuildPathDBSQLSystem', DBSQL_FILEPATH],
   ['apm/lib.BuildPathImageFile', IMAGE_FILEPATH],
+  ['apm/lib.BuildVersion', version],
 ]
 
 ldflags = []
