beginning refactoring config

--- a/meson.build
+++ b/meson.build
@@ -35,6 +35,12 @@ constants = [
   ['apm/lib.BuildPathDBSQLSystem', DBSQL_FILEPATH],
   ['apm/lib.BuildPathImageFile', IMAGE_FILEPATH],
   ['apm/lib.BuildVersion', version],
+  ['apm/internal/common/config.BuildCommandPrefix', COMMAND_PREFIX],
+  ['apm/internal/common/config.BuildEnvironment', PROFILE],
+  ['apm/internal/common/config.BuildPathLocales', LOCALES_DIR],
+  ['apm/internal/common/config.BuildPathDBSQLSystem', DBSQL_FILEPATH],
+  ['apm/internal/common/config.BuildPathImageFile', IMAGE_FILEPATH],
+  ['apm/internal/common/config.BuildVersion', version],
 ]
 
 ldflags = []
