--- a/meson.build
+++ b/meson.build
@@ -29,12 +29,6 @@ DBSQL_FILEPATH = get_option('localstatedir') / 'lib' / meson.project_name() / me
 IMAGE_FILEPATH = get_option('sysconfdir') / meson.project_name() / 'image.yml'
 
 constants = [
-  ['apm/lib.BuildCommandPrefix', COMMAND_PREFIX],
-  ['apm/lib.BuildEnvironment', PROFILE],
-  ['apm/lib.BuildPathLocales', LOCALES_DIR],
-  ['apm/lib.BuildPathDBSQLSystem', DBSQL_FILEPATH],
-  ['apm/lib.BuildPathImageFile', IMAGE_FILEPATH],
-  ['apm/lib.BuildVersion', version],
   ['apm/internal/common/app.BuildCommandPrefix', COMMAND_PREFIX],
   ['apm/internal/common/app.BuildEnvironment', PROFILE],
   ['apm/internal/common/app.BuildPathLocales', LOCALES_DIR],
@@ -48,40 +42,8 @@ foreach constant : constants
   ldflags += '-X \'@0@=@1@\''.format(constant[0], constant[1])
 endforeach
 
-# --- C++ wrapper ---
-apt_wrapper_sources = [
-  'internal/common/binding/apt/wrapper/apt_wrapper.cpp',
-  'internal/common/binding/apt/wrapper/apt_install.cpp',
-  'internal/common/binding/apt/wrapper/apt_dist.cpp',
-  'internal/common/binding/apt/wrapper/apt_simulate.cpp',
-  'internal/common/binding/apt/wrapper/apt_package_operations.cpp',
-  'internal/common/binding/apt/wrapper/apt_search.cpp',
-  'internal/common/binding/apt/wrapper/apt_getinfo.cpp',
-]
-apt_wrapper_inc = include_directories('internal/common/binding/apt/wrapper')
-
-apt_wrapper_lib = static_library(
-  'apt_wrapper',
-  apt_wrapper_sources,
-  include_directories: [apt_wrapper_inc],
-  dependencies: [apt_dep],
-  cpp_args: ['-DAPT_WRAPPER_BUILD', '-fPIC'],
-)
-
 subdir('po')
 subdir('data')
-
-lib_dir = join_paths(meson.current_source_dir(), 'internal/common/binding/apt/lib')
-lib_go_files = [
-  join_paths(lib_dir, 'cgo.go'),
-  join_paths(lib_dir, 'cache.go'),
-  join_paths(lib_dir, 'helpers.go'),
-  join_paths(lib_dir, 'manager.go'),
-  join_paths(lib_dir, 'progress.go'),
-  join_paths(lib_dir, 'system.go'),
-  join_paths(lib_dir, 'types.go'),
-  join_paths(lib_dir, 'logging.go'),
-]
 
 custom_target(
   'go-build',
@@ -92,21 +54,14 @@ custom_target(
   install: true,
   install_dir: get_option('bindir'),
   command: [
-    '/usr/bin/bash', '-lc',
-    'set -e; ' +
-    'ts=$(date +%s); ' +
-    'for f in ' + ' '.join(lib_go_files) + ' ; do sed -i "s#// cgo-timestamp: .*#// cgo-timestamp: ${ts}#g" "$f"; done; ' +
-    'go build -v -ldflags ' + '\'' + ' '.join(ldflags) + '\'' + ' -o @OUTPUT@ ' + meson.current_source_dir()
+    go_bin,
+    'build', '-v',
+    '-ldflags', ' '.join(ldflags),
+    '-o', '@OUTPUT@',
+    meson.current_source_dir()
   ],
-  depends: [apt_wrapper_lib],
   env: [
     'CGO_ENABLED=1',
-    'CGO_CFLAGS=' +
-      '-I' + meson.current_source_dir() + '/internal/common/binding/apt/wrapper ' +
-      '-I/usr/include/apt-pkg',
-    'CGO_LDFLAGS=' +
-      '-L' + meson.current_build_dir() + ' ' +
-      '-Wl,-Bstatic -lapt_wrapper -Wl,-Bdynamic -lapt-pkg -lstdc++',
   ]
 )
 
@@ -114,8 +69,6 @@ custom_target(
 bash = find_program('bash')
 go_test_env = [
   'CGO_ENABLED=1',
-  'CGO_CFLAGS=' + '-I' + meson.current_source_dir() + '/internal/common/binding/apt/wrapper ' + '-I/usr/include/apt-pkg',
-  'CGO_LDFLAGS=' + '-L' + meson.current_build_dir() + ' ' + '-Wl,-Bstatic -lapt_wrapper -Wl,-Bdynamic -lapt-pkg -lstdc++',
 ]
 
 # Unit tests (no APT dependencies)
@@ -123,7 +76,6 @@ test('go-unit-tests',
   bash,
   args: ['-lc', 'cd ' + meson.current_source_dir() + ' && go test -v -p 1 -count=1 ./tests/common/... ./tests/lib/... -tags "unit"'],
   env: go_test_env,
-  depends: [apt_wrapper_lib],
   suite: 'unit',
   timeout: 300,
 )
@@ -133,7 +85,6 @@ test('go-apt-tests',
   bash,
   args: ['-lc', 'cd ' + meson.current_source_dir() + ' && go test -v -p 1 -count=1 ./tests/binding/... -tags "apt_binding"'],
   env: go_test_env,
-  depends: [apt_wrapper_lib],
   suite: 'apt',
   timeout: 1200,
 )
@@ -143,7 +94,6 @@ test('go-system-tests',
   bash,
   args: ['-lc', 'cd ' + meson.current_source_dir() + ' && go test -v -p 1 -count=1 ./tests/system/... ./tests/mocks/... -tags "system,apt_binding"'],
   env: go_test_env,
-  depends: [apt_wrapper_lib],
   suite: 'system',
   timeout: 1800,
 )
@@ -153,7 +103,6 @@ test('go-distrobox-tests',
   bash,
   args: ['-lc', 'cd ' + meson.current_source_dir() + ' && go test -v -p 1 -count=1 ./tests/distrobox/... -tags "distrobox"'],
   env: go_test_env,
-  depends: [apt_wrapper_lib],
   suite: 'distrobox',
   timeout: 600,
 )
