--- a/meson.build
+++ b/meson.build
@@ -31,8 +31,8 @@ COMMAND_PREFIX = ''
 PROFILE = get_option('profile')
 LOCALES_DIR = get_option('prefix') / get_option('localedir')
 DBSQL_FILEPATH = get_option('localstatedir') / 'lib' / meson.project_name() / meson.project_name() + '.db'
-IMAGE_FILEPATH = get_option('sysconfdir') / meson.project_name() / 'image.yml'
-RESOURCES_FILEPATH = get_option('sysconfdir') / meson.project_name() / 'resources'
+IMAGE_FILEPATH = get_option('localstatedir') / meson.project_name() / 'image.yml'
+RESOURCES_FILEPATH = get_option('localstatedir') / meson.project_name() / 'resources'
 
 constants = [
   ['apm/internal/common/app.BuildCommandPrefix', COMMAND_PREFIX],
