--- a/.gear/rules
+++ b/.gear/rules
@@ -1,5 +1,5 @@
-spec: .gear/apm.spec
-copy: .gear/apm.tmpfiles
+spec: altlinux/apm.spec
+copy: altlinux/apm.tmpfiles
 tar: v@version@:.
 tar: vendor name=vendor
-diff: v@version@:. . exclude=.gear exclude=vendor
+diff: v@version@:. . exclude=.gear exclude=altlinux exclude=vendor
