--- a/data/org.altlinux.APM.conf.in
+++ b/data/org.altlinux.APM.conf.in
@@ -7,6 +7,7 @@
 
   <policy context="default">
     <allow send_destination="@SERVICE_ID@" send_interface="@SERVICE_ID@.system"/>
+    <allow send_destination="@SERVICE_ID@" send_interface="@SERVICE_ID@.kernel"/>
     <allow send_destination="@SERVICE_ID@" send_interface="org.freedesktop.DBus.Introspectable"/>
   </policy>
 </busconfig>
