config: Remove hardcoded path and add installing /var/lib/apm dir

--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,7 @@ COMMAND_PREFIX = ''
 PROFILE = get_option('profile')
 LOCALES_DIR = get_option('prefix') / get_option('localedir')
 DBSQL_FILEPATH = get_option('localstatedir') / 'lib' / meson.project_name() / meson.project_name() + '.db'
+CONTAINERFILE_FILEPATH = get_option('localstatedir') / 'lib' / meson.project_name() / 'Containerfile'
 IMAGE_FILEPATH = get_option('sysconfdir') / meson.project_name() / 'image.yml'
 RESOURCES_FILEPATH = get_option('sysconfdir') / meson.project_name() / 'resources'
 
@@ -39,6 +40,7 @@ constants = [
   ['apm/internal/common/app.BuildEnvironment', PROFILE],
   ['apm/internal/common/app.BuildPathLocales', LOCALES_DIR],
   ['apm/internal/common/app.BuildPathDBSQLSystem', DBSQL_FILEPATH],
+  ['apm/internal/common/app.BuildPathContainerFile', CONTAINERFILE_FILEPATH],
   ['apm/internal/common/app.BuildPathImageFile', IMAGE_FILEPATH],
   ['apm/internal/common/app.BuildPathResourcesDir', RESOURCES_FILEPATH],
   ['apm/internal/common/app.BuildVersion', version],
@@ -51,6 +53,8 @@ endforeach
 
 subdir('po')
 subdir('data')
+
+install_emptydir(get_option('localstatedir') / 'lib' / meson.project_name())
 
 custom_target(
   'go-build',
