ci: Fix missing golang package

--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Install utils
         run: |
           apt-get update
-          apt-get install -y meson jq /usr/bin/add_changelog
+          apt-get install -y meson jq /usr/bin/add_changelog golang
 
       - name: Checkout repository
         uses: actions/checkout@v4
