--- a/build-aux/altlinux/apm.spec.in
+++ b/build-aux/altlinux/apm.spec.in
@@ -54,6 +54,7 @@ done
 
 %files -f %name.lang
 %_localstatedir/%name
+%_localstatedir/cache/%name
 %_sysconfdir/%name
 %_tmpfilesdir/%name.conf
 %_bindir/%name
