--- a/.forgejo/workflows/build-altlinux.yml
+++ b/.forgejo/workflows/build-altlinux.yml
@@ -13,17 +13,21 @@ permissions:
 
 jobs:
   build-altlinux:
-    name: RPM build for ${{ matrix.branch }} and uploading
+    name: RPM build for ${{ matrix.branch }} for ${{ matrix:arch }} and uploading
 
     runs-on: alt-sisyphus
     container:
-      image: altlinux.space/rirusha/riru-build-image:latest
+      image: altlinux.space/actions/runner/hasherc:sisyphus
+      options: --platform linux/${{ matrix:arch }}
 
     strategy:
       matrix:
         branch:
           - sisyphus
           - p11
+        arch:
+          - amd64
+          - arm64
 
     steps:
       - name: Install hasherc
