--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -49,20 +49,16 @@ jobs:
         run: meson compile -C _build
 
   rpm-build:
-    name: RPM build for ${{ matrix.branch }} for ${{ matrix:arch }} and uploading
+    name: RPM build for ${{ matrix.branch }} for and uploading
     runs-on: alt-sisyphus
     container:
       image: altlinux.space/rirusha/riru-build-image:latest
-      options: "--platform linux/${{ matrix:arch }}"
 
     strategy:
       matrix:
         branch:
           - sisyphus
           - p11
-        arch:
-          - amd64
-          - arm64
     needs:
       - lint-vala
       - lint-blueprint
