feat(altlinux): Add arm build

--- a/.forgejo/workflows/build-altlinux.yml
+++ b/.forgejo/workflows/build-altlinux.yml
@@ -13,9 +13,9 @@ permissions:
 
 jobs:
   build-altlinux:
-    name: RPM build for ${{ matrix.branch }} for and uploading
+    name: RPM build for ${{ matrix.branch }} for ${{ matrix.arch }} for and uploading
+    runs-on: ${{ matrix.runner }}
 
-    runs-on: alt-sisyphus
     container:
       image: altlinux.space/actions/runner/hasherc:${{ matrix.branch }}
 
@@ -24,6 +24,22 @@ jobs:
         branch:
           - sisyphus
           - p11
+        arch:
+          - amd64
+          - arm64
+        include:
+          - arch: arm64
+            branch: sisyphus
+            runner: self-hosted-arm64-alt-sisyphus
+          - arch: arm64
+            branch: p11
+            runner: self-hosted-arm64-alt-p11
+          - arch: amd64
+            branch: sisyphus
+            runner: alt-sisyphus
+          - arch: amd64
+            branch: p11
+            runner: alt-p11
 
     steps:
       - name: Install hasherc
