--- a/.forgejo/workflows/build-altlinux.yml
+++ b/.forgejo/workflows/build-altlinux.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.runner }}
 
     container:
-      image: altlinux.space/actions/runner/hasherc:${{ matrix.branch }}
+      image: altlinux.space/actions/runner/hasherc:sisyphus
 
     strategy:
       matrix:
@@ -29,17 +29,9 @@ jobs:
           - arm64
         include:
           - arch: arm64
-            branch: sisyphus
             runner: self-hosted-arm64-alt-sisyphus
-          - arch: arm64
-            branch: p11
-            runner: self-hosted-arm64-alt-p11
           - arch: amd64
-            branch: sisyphus
             runner: alt-sisyphus
-          - arch: amd64
-            branch: p11
-            runner: alt-p11
 
     steps:
       - name: Install hasherc
