--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -50,7 +50,7 @@ jobs:
 
   rpm-build:
     name: RPM build for ${{ matrix.branch }} for ${{ matrix.arch }} for and uploading
-    runs-on: ${{ matrix.runner }}
+    runs-on: als-tiny
     container:
       image: altlinux.space/alt-gnome/hasherc:latest
 
@@ -62,11 +62,6 @@ jobs:
         arch:
           - amd64
           - arm64
-        include:
-          - arch: arm64
-            runner: self-hosted-arm64-alt-sisyphus
-          - arch: amd64
-            runner: alt-sisyphus
 
     needs:
       - lint-vala
@@ -90,6 +85,7 @@ jobs:
         name: Build RPMs
         with:
           branch: ${{ matrix.branch }}
+          arch: ${{ matrix.arm64 }}
 
       - uses: alt-gnome/upload-rpm-action@main
         name: Upload RPMs
