ci: Use als-huge for rom building

--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -50,7 +50,7 @@ jobs:
 
   rpm-build:
     name: RPM build for ${{ matrix.branch }} for ${{ matrix.arch }} for and uploading
-    runs-on: als-tiny
+    runs-on: als-huge
     container:
       image: altlinux.space/alt-gnome/hasherc:latest
 
