--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Prepare RPM build
         run: |
-          podman run --rm --platform linux/${{ matrix.arch }} sisyphus/alt uname -a
+          podman run --rm --platform linux/${{ matrix.arch }} registry.altlinux.org/sisyphus/alt:latest uname -a
           ./build-aux/altlinux/prepare
           git add .
 
