--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -52,7 +52,7 @@ jobs:
     name: RPM build for ${{ matrix.branch }} for ${{ matrix.arch }} for and uploading
     runs-on: als-huge
     container:
-      image: altlinux.space/alt-gnome/hasherc:latest
+      image: altlinux.space/actions/runner/hasherc:sisyphus
 
     strategy:
       matrix:
