ci: Improve arm build

--- a/.forgejo/workflows/build-altlinux.yml
+++ b/.forgejo/workflows/build-altlinux.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   build-altlinux:
     name: RPM build for ${{ matrix.branch }} for ${{ matrix.arch }} for and uploading
-    runs-on: als-tiny
+    runs-on: ${{ matrix.runner }}
 
     container:
       image: altlinux.space/alt-gnome/hasherc:latest
@@ -27,6 +27,11 @@ jobs:
         arch:
           - amd64
           - arm64
+        include:
+          - arch: amd64
+            runner: als-huge
+          - arch: arm64
+            runner: self-hosted-arm64-huge
 
     steps:
       - name: Install utils
