--- a/.forgejo/workflows/build-main.yml
+++ b/.forgejo/workflows/build-main.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Install utils
         run: |
           apt-get update
-          apt-get install -y meson jq /usr/bin/add_changelog golang
+          apt-get install -y meson jq /usr/bin/add_changelog golang fuse-overlayfs
 
       - name: Checkout repository
         uses: actions/checkout@v4
